--- a/templates/session/ModifDuree.html.twig
+++ b/templates/session/ModifDuree.html.twig
@@ -1,8 +1,10 @@
 {% extends 'base.html.twig' %}
 {% block body %}
+<div class="container prog">
 {{form_start(formProgramme)}}
 {{form_widget(formProgramme)}}
 <input class="border border-dark rounded d-inline-block p-1 mt-1 mb-2 bg-light text-dark" type="submit">
 {{form_end(formProgramme)}}
+</div>
     
 {% endblock %}
