--- a/public/css/style.css
+++ b/public/css/style.css
@@ -25,6 +25,9 @@ body{
 .alert{
     margin-left:0 0.5em;
 }
+a{
+    color:black
+}
 /* #slide{
     max-width: 10%;
     position: fixed;
@@ -78,12 +81,23 @@ img{
     display: inline-block;
     width: 100px;
 }
+.title_sess{
+    width: 50%;
+    margin-top:1em;
+}
+.list_stagiaires{
+    width: 50%;
+}
 .prog{
-    justify-content: space-around;
+    background: rgb(220,220,220,0.8);
 }
-.prog > div{
-    width: 40%;
+.prog div:nth-child(2){
+    width: 50%;
 }
+.prog div{
+    margin: auto;
+}
+
 .info_sess{
     max-width: 50%;
 }
@@ -154,9 +168,22 @@ img{
 }
 .reste,.success{
     color : rgb(0,180,0);
+    
+}
+#success, .errors{
+    display: flex;
+    justify-content: space-around;
 }
 form[name="session"]{
-    width: 30%;
+    width: 50%;
+    margin: auto;
+}
+.affich_session{
+    justify-content: space-around;
+}
+.programme{
+    flex: 1;
+    margin-right: 1em;
 }
 form[name="add_stagiaire"]{
     background:rgb(220,220,220,0.8);
@@ -205,12 +232,17 @@ form[name="add_stagiaire"]{
     width: 0%;
   }
   .custom-file{
-    /* width: 20%; */
+    width: 30%;
   }
   form[name="stagiaire"]{
       background: rgb(220,220,220,0.8);
       padding: 1em;
   }
+  .flex_form{
+        display: flex;
+        justify-content: space-around;
+        /* width: 50%; */
+    }
   
 @media screen and (max-width: 640px) {
     .modules_tab{
@@ -235,6 +267,7 @@ form[name="add_stagiaire"]{
     }
     .flex_form{
         color: white;
+        width: 50%;
     }
     nav{        
         flex-direction: column;
