--- a/templates/stagiaire/addStagiaire.html.twig
+++ b/templates/stagiaire/addStagiaire.html.twig
@@ -1,23 +1,22 @@
 {% extends 'base.html.twig' %}
 {% block body %}
 {{ form_start(form) }}
-<div class="flex flex_form">
+<div class="container flex_form">
     <div>
         {{ form_row(form.nom) }} 
         {{ form_row(form.prenom) }}
         {{ form_row(form.sexe) }} 
         {{ form_row(form.birth) }}
-    </div>
-    <div>
+   
         {{ form_row(form.ville) }} 
         {{ form_row(form.email) }} 
         {{ form_row(form.phone) }} 
         {{ form_row(form.photo,{ 'attr': {'onchange': 'readURL(this);'} }) }} 
     </div>
-</div>
     <div class="prev">
         <img id="blah" src="{{asset('img/avatar.jpg')}}" alt="">
     </div>
+</div>
     {{ form_row(form.submit) }}
 {{ form_end(form) }}
 {% endblock %}
