--- a/templates/session/ModifDuree.html.twig
+++ b/templates/session/ModifDuree.html.twig
@@ -1,4 +1,7 @@
 {% extends 'base.html.twig' %}
+{% block title %}
+    Modifier durée
+{% endblock %}
 {% block body %}
 <div class="container prog">
 {{form_start(formProgramme)}}
