--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -14,7 +14,7 @@
     <body>
         {% block test %}
         <div id="slide">
-            <nav class=" d-flex justify-content-evenly  navbar-dark bg-dark p-3" style="background-color: #e3f2fd;">
+            <nav class=" navbar-dark bg-dark p-3" style="background-color: #e3f2fd;">
                 {% block nav %}
                 <a class="p-1 mb-4 bg-light text-dark rounded" href="{{path('home')}}">Liste des sessions</a>
                 <a class="p-1 mb-4 bg-light text-dark rounded" href="{{path('stagiaire')}}">Liste des stagiaires</a>
@@ -47,6 +47,7 @@
             {% endblock %}
 
         </div>
+        <footer></footer>
         {% block javascripts %}
         <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.19.2/axios.min.js" integrity="sha256-T/f7Sju1ZfNNfBh7skWn0idlCBcI3RwdLSS4/I7NQKQ=" crossorigin="anonymous"></script>
             {# <script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script> #}
