--- a/templates/session/vacances.html.twig
+++ b/templates/session/vacances.html.twig
@@ -3,7 +3,13 @@
 
 <div class="container">
     <h1>{{session.nom}}</h1>
-    <p>Du : {{session.dateDebut|date('d-m-Y')}} au : {{session.dateFin|date('d-m-Y')}}</p>   
+    <p>Du : {{session.dateDebut|date('d-m-Y')}} au : {{session.dateFin|date('d-m-Y')}}</p>
+    <div>
+        <h4>Vacances déjà programmée</h4>
+        {% for vacance in tabVacances %}
+            <p>{{vacance.dateDebut|date('d-m-Y')}} {{vacance.dateFin|date('d-m-Y')}}</p>
+        {% endfor %}
+    </div>
     {{ form_start(formVacances) }}
     {{ form_row(formVacances.date_debut) }}
     {{ form_row(formVacances.date_fin) }}
