--- a/templates/session/CreaProgramme.html.twig
+++ b/templates/session/CreaProgramme.html.twig
@@ -1,36 +1,38 @@
 {% extends 'base.html.twig' %}
 {% block body %}
-<h1> {{thisSession.nom}} </h1>
-<div class="flex between">
-    <div>
-        <h4>crea Categorie</h4>
-        {{ form_start(formCategorie) }}
-        {{form_widget(formCategorie)}}
-        <input class="border border-dark rounded d-inline-block p-1 mt-1 mb-2 bg-light text-dark" type="submit">
-        {{ form_end(formCategorie) }}
-    </div>
+<div class="container">
+    <h1 class="text-center"> {{thisSession.nom}} </h1>
     {% if thisSession.programmes|length != 0 %}
-    <div class="listMod">
+    <div class="listMod alert alert-dark">
         <h4>Modules déja présents</h4>
         {% for programme in thisSession.programmes %}
             <div> {{programme.module.nom}} </div>
             
         {% endfor %}
     </div>
-    {% endif %}
-    <div>
+</div>
+{% endif %}
+<div class="flex creaProg container">
+    <div class="alert alert-dark">
+        <h4>crea Categorie</h4>
+        {{ form_start(formCategorie) }}
+        {{form_widget(formCategorie)}}
+        <input class="border border-dark rounded d-inline-block p-1 mt-1 mb-2 bg-light text-dark" type="submit">
+        {{ form_end(formCategorie) }}
+    </div>
+    <div class="alert alert-dark">
         <h4>crea module</h4>
         {{ form_start(formModule) }}
         {{form_widget(formModule)}}
         <input class="border border-dark rounded d-inline-block p-1 mt-1 mb-2 bg-light text-dark" type="submit">
         {{ form_end(formModule) }}
     </div>
-</div>
-<div class="crea_prog">
-    {{ form_start(formProgramme) }}
-    <h4>crea programme</h4>
-    {{form_widget(formProgramme)}}
-    <input class="border border-dark rounded d-inline-block p-1 mt-1 mb-2 bg-light text-dark" type="submit">
-    {{ form_end(formProgramme) }}
+    <div class="alert alert-dark">
+        {{ form_start(formProgramme) }}
+        <h4>crea programme</h4>
+        {{form_widget(formProgramme)}}
+        <input class="border border-dark rounded d-inline-block p-1 mt-1 mb-2 bg-light text-dark" type="submit">
+        {{ form_end(formProgramme) }}
+    </div>
 </div>
 {% endblock %}
