--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -20,6 +20,9 @@
                 <a class="p-1 mb-4 bg-light text-dark rounded" href="{{path('stagiaire')}}">Liste des stagiaires</a>
                 <a class="rounded p-1 mb-4 bg-light text-dark"href="{{path('addStagiaire')}}">Ajouter un stagiaire</a>                
                 <a class="rounded p-1 mb-4 bg-light text-dark"href="{{path('affich_module')}}">liste des modules</a>
+                <a class="rounded p-1 mb-4 bg-light text-dark"href="{{path('app_register')}}">Register</a>
+                <a class="rounded p-1 mb-4 bg-light text-dark"href="{{path('app_login')}}">connexion</a>
+                <a class="rounded p-1 mb-4 bg-light text-dark"href="{{path('app_logout')}}">Déconnexion</a>
                 {% endblock %}
             </nav>
         </div> 
