--- a/public/css/style.css
+++ b/public/css/style.css
@@ -22,6 +22,12 @@ footer{
     position: sticky;
     bottom: 0;
 }
+.konami{
+    display: none;
+    position: fixed;
+    top: 0;
+    z-index: 1;
+}
 
   .modileMenu {
       display: none;
