--- a/public/css/style.css
+++ b/public/css/style.css
@@ -295,17 +295,23 @@ form[name="add_stagiaire"]{
         width: 50%;
     }
     nav{        
+        display: none;
         flex-direction: column;
         height: auto;
         position: fixed;
         width: 100%;
         z-index: 1;
     }
-    nav a{
-        width: 80%;
-        margin-bottom: 1em;
+    nav div{
+        width: 50%;
         margin: auto;
         height: auto;
+    }
+    nav div a{
+        display: inline-block;
+        padding: 1em;
+        margin-bottom: 1em;
+        width: 100%;
     }
     header .modileMenu {
         display: block;
