--- a/public/css/style.css
+++ b/public/css/style.css
@@ -46,6 +46,9 @@ nav{
     display: flex;
     justify-content: space-around;
 }
+nav div a{
+    padding: 0.5em;
+}
 .flex{
     display: flex;
     justify-content: space-between;
