--- a/templates/session/index.html.twig
+++ b/templates/session/index.html.twig
@@ -57,7 +57,7 @@
                 <th scope="col">Duree</th>
                 <th scope="col"></th>
                 <tbody>  
-                    {% for  key,cat in tab  %}
+                    {% for  key,cat in tab |sort((a, b) => b <=> a)  %}
                     <tr class="title_cat">
                         <td colspan="3">
                             {{key}}
