--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -35,7 +35,7 @@
                 <div>
                     <a class="rounded  bg-light text-dark"href="{{path('affich_module')}}">liste des modules</a>
                 </div>                
-                <!-- <div>
+                <div>
                     <a class="rounded  bg-light text-dark"href="{{path('app_register')}}">Register</a>
                 </div>
                 <div>
@@ -43,7 +43,7 @@
                 </div>
                 <div>
                     <a class="rounded  bg-light text-dark"href="{{path('app_logout')}}">Déconnexion</a>
-                </div> -->
+                </div>
                 {% endblock %}
             </nav>
         </div> 
